--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,53 +1,5 @@
-
 #login {
     color:lightseagreen;
     background-color: #F0FFFF;
-    border: none;
+    /* border: none; */
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
