--- a/src/components/PlantForm.css
+++ b/src/components/PlantForm.css
@@ -1,53 +1,10 @@
-button {
-    background-color: #F0FFFF;
-    border: none;
-    color: lightseagreen;
+.form-container{
+    display: flex;
+    flex-direction:column;
+    justify-content:space-around;
+    width:100%;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.form-group-inputs{
+    display:flex;
+    flex-direction:column;
+}
