Changed styling on home page

--- a/src/components/plantForm.css
+++ b/src/components/plantForm.css
@@ -1,10 +1,53 @@
-.form-container{
-    display: flex;
-    flex-direction:column;
-    justify-content:space-around;
-    width:100%;
+button {
+    background-color: #F0FFFF;
+    border: none;
+    color: lightseagreen;
 }
-.form-group-inputs{
-    display:flex;
-    flex-direction:column;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
