--- a/src/components/plantForm.css
+++ b/src/components/plantForm.css
@@ -8,3 +8,8 @@
     display:flex;
     flex-direction:column;
 }
+button {
+    background-color: #F0FFFF;
+    border: none;
+    color: lightseagreen;
+}
