--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,6 +1,6 @@
 #footer-container {
     color:lightseagreen;
-    background-color:white;
+    /* background-color:white; */
     /* border: 1px solid black; */
     width:100%;
     display:flex;
