--- a/src/components/plantForm.css
+++ b/src/components/plantForm.css
@@ -5,7 +5,8 @@
     width:350px;
     background-color:rgba(7, 7, 7, 0.096);
     align-items:center;
-    padding-bottom:20px;
+    padding-bottom:30px;
+    border-radius: 10px;
 }
 .form-group-inputs{
     display:flex;
