--- a/src/App.css
+++ b/src/App.css
@@ -5,23 +5,9 @@
   justify-content:center;
   align-items:center;
   width:100%;
+  padding-bottom: 27%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-  width:100%;
-}
-
-.App-link {
-  color: #61dafb;
-}
 
 body {
   background-color:#F0FFFF ;
