--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -8,6 +8,8 @@
     background-image:url("https://images.unsplash.com/photo-1477554193778-9562c28588c0?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=870&q=80");
     background-size: cover;
     background-position:center;
+    padding-bottom: 10%;
+
 }
 
 .home-container h2{
