--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,13 +1,18 @@
 #footer-container {
     color:lightseagreen;
-    /* background-color:white; */
-    /* border: 1px solid black; */
     width:100%;
     display:flex;
     flex-direction:column;
+    height: 10vh;
 }
 #footer-container address{
     display:flex;
     justify-content:space-around;
     width:100%;
 }
+
+address {
+
+}
+
+
