--- a/src/components/Sign_Up.css
+++ b/src/components/Sign_Up.css
@@ -11,6 +11,19 @@
     font-weight: bolder;
 }
 
+.form-header {
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+
+.input-container {
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+}
+
 
 .form-inputs {
     background:transparent;
@@ -33,14 +46,23 @@
     background-color: ivory;
 }
 
-#signup-form {
-    padding: 12% 1%;
+.main-container {
+    height: 25%;
     background-repeat: no-repeat;
     background-size: cover;
     background-image:url("https://images.unsplash.com/photo-1477554193778-9562c28588c0?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=870&q=80");
 }
 
-#signup {
+#signup-form {
+    display: flex;
+    justify-content: space-between;
+    padding: 12% 1%;
+    background-repeat: no-repeat;
+    background-size: 100% 50%;
+    
+}
+
+#signup-button {
     width: 4%;
     border-radius: 8%;
     background: transparent;
