--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,22 +1,22 @@
 header{
     display: flex;
     width:100%;
-    flex-direction:column;
+    /* flex-direction:column; */
     top: 0;
     background-color:#F0FFFF ;
 }
 nav{
     display:flex;
     justify-content:space-around;
-    width:100%;
+    width:70%;
     align-items:center;
     padding:10px;
-    background-color:white;
+    /* background-color:white; */
     /*border-top: 1px dashed lightseagreen;*/
     /*border-bottom: 1px dashed lightseagreen;*/
 }
 h1{
-    width:100%;
+    width:30%;
     display:flex;
     justify-content:flex-start;
     align-items:flex-start;
