--- a/src/components/header.css
+++ b/src/components/header.css
@@ -5,7 +5,7 @@ header{
     top: 0;
     background-color:#F0FFFF ;
 }
-nav{
+header nav{
     display:flex;
     justify-content:space-around;
     width:100%;
@@ -15,13 +15,13 @@ nav{
     /*border-top: 1px dashed lightseagreen;*/
     /*border-bottom: 1px dashed lightseagreen;*/
 }
-h1{
+header h1{
     width:100%;
     display:flex;
     justify-content:flex-start;
-    align-items:flex-start;
+    align-items:flex-start; 
     padding-left:20px;
-    height:50px;
+    height:50px; 
     font-size:3rem;
     margin:20px;
 }
