--- a/src/components/Sign_Up.css
+++ b/src/components/Sign_Up.css
@@ -11,7 +11,7 @@
     font-weight: bolder;
 }
 
-.form-header {
+.signup-form-header {
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -21,7 +21,7 @@
     background-color: rgba(255, 255, 255, 0.8);
 }
 
-.input-container {
+.signup-input-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -54,10 +54,8 @@
     background-color: ivory;
 }
 
-.main-container {
+.signup-container {
     height: 50vh;
-    background-repeat: no-repeat;
-    background-size: cover;
     padding: 0 5%;
 }
 
