--- a/src/components/login.css
+++ b/src/components/login.css
@@ -1,11 +1,25 @@
-/* .main-container {
+.form-inputs input {
+    background:transparent;
+    border-radius: 25%;
+    /* border: none; */
+    color: darkgrey;
+    outline: none;
+}
+
+.login-container {
     height: 50vh;
-    background-repeat: no-repeat;
-    background-size: cover;
     padding: 0 5%;
 }
 
-.form-header {
+#login-form {
+    display: flex;
+    height: 70vh;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+}
+
+.login-form-header {
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -15,17 +29,26 @@
     background-color: rgba(255, 255, 255, 0.8);
 }
 
-#login {
-    color:lightseagreen;
-    background-color: #F0FFFF;
-    border: none;
-} */
-
-#login-form {
+.login-input-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    height: 80%;
+    background-color: rgba(255, 255, 255, 0.8);
 }
 
-.main-container {
-    height: 50vh;
+#signup {
+    text-decoration: none;
+    background: transparent;
+    font-weight: bolder;
+}
+
+#login-button {
+    /* width: 4%; */
+    border-radius: 8%;
+    background: transparent;
+    font-weight: bolder;
+    font-size: 1.5rem;
 }
